# SberIndex

./: .gitignore  EDA.ipynb  README.md  pyproject.toml
data/: territory_data.xlsx  Площади субъектов.xlsx  Строительство объектов.xls
data/clear/: region_jobless.xls  region_salary.xls  region_square.xlsx
info/: Данные.docx  Описание данных для Хакатона (2025-6-3).docx  Описание итоговых данных и запрос к БД.docx
