[project]
name = "sber-index"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ipykernel>=6.29.5",
    "nbformat>=4.2.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "plotly>=6.1.2",
    "pyarrow>=20.0.0",
    "xlrd>=2.0.1",
]
